--- a/BelgianTreat/config.json
+++ b/BelgianTreat/config.json
@@ -1,5 +1,9 @@
 {
   "ConnectionStrings": {
     "BelgianConnectionString": "server=(localdb)\\MSSQLLocalDB;Database=BelgianTreatDb;Integrated Security=true;MultipleActiveResultSets=true"
+  },
+  "Logging": {
+    "Default": "Information",
+    "Windows": "Warning"
   }
 }
